--- a/package.json
+++ b/package.json
@@ -9,10 +9,25 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.1",
+    "@react-native-community/datetimepicker": "7.2.0",
+    "@react-native-masked-view/masked-view": "0.2.9",
+    "@react-navigation/bottom-tabs": "^6.5.8",
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/stack": "^6.3.17",
+    "apisauce": "^3.0.1",
     "expo": "~49.0.8",
+    "expo-constants": "^14.4.2",
+    "expo-image-picker": "~14.3.2",
     "expo-status-bar": "~1.6.0",
+    "lottie-react-native": "5.1.6",
     "react": "18.2.0",
-    "react-native": "0.72.4"
+    "react-hook-form": "^7.46.0",
+    "react-native": "0.72.4",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-progress": "^5.0.0",
+    "yup": "^1.2.0",
+    "@react-native-picker/picker": "2.4.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
